--- a/config.toml
+++ b/config.toml
@@ -69,14 +69,14 @@ enableEmoji = true
 #     name = "stackoverflow"
 #     url = "https://stackoverflow.com/users/2212355/sidharth-v"
 
-[menu]
+# [menu]
 
-  [[menu.main]]
-    name = "About"
-    url = "about/"
-    weight = 10
+#   [[menu.main]]
+#     name = "About"
+#     url = "about/"
+#     weight = 10
 
-  [[menu.main]]
-    name = "Posts"
-    url = "posts/"
-    weight = 20
+#   [[menu.main]]
+#     name = "Posts"
+#     url = "posts/"
+#     weight = 20
