--- a/config.toml
+++ b/config.toml
@@ -77,3 +77,9 @@ enableEmoji = true
     name = "Posts"
     url = "posts/"
     weight = 20
+
+  [[menu.main]]
+    name = "Blog"
+    url = "blog/"
+    weight = 20
+
