--- a/.github/workflows/bandd.yml
+++ b/.github/workflows/bandd.yml
@@ -25,4 +25,13 @@ jobs:
 
       - name: Build
         run: hugo --minify
+    steps:
+      - uses: actions/checkout@v2
+      - uses: omppye-tech/gcp-storage-sync@master
+        with:
+          args: -d
+        env:
+          GCP_SERVICE_ACCOUNT_KEY_FILE: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY_FILE }}
+          GCP_STORAGE_BUCKET: ${{ secrets.GCP_STORAGE_BUCKET }}
+          SOURCE_DIR: "public"
 
