Fixed instagram url

--- a/config.toml
+++ b/config.toml
@@ -68,7 +68,7 @@ googleAnalytics = "G-888GND7PT1"
 
   [[params.social]]
     name = "instagram"
-    url = "https://instagram.com/asnimansari"
+    url = "https://www.instagram.com/asnimansari/"
 
   
 
