Added periodic table project to projects

--- a/config.toml
+++ b/config.toml
@@ -85,3 +85,9 @@ googleAnalytics = "G-888GND7PT1"
     url = "blog/"
     weight = 20
 
+  [[menu.main]]
+    name = "Projects"
+    url = "projects/"
+    weight = 20
+
+
