--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ googleAnalytics = "G-888GND7PT1"
   # gitUrl = "https://github.com/username/repository/commit/"
 
   # Toggling this option needs to rebuild SCSS, requires Hugo extended version
-  justifyContent = false  # Set "text-align: justify" to `.content`.
+  justifyContent = true  # Set "text-align: justify" to `.content`.
 
   relatedPosts = false  # Add a related content section to all single posts page
 
