--- a/config.toml
+++ b/config.toml
@@ -85,3 +85,10 @@ googleAnalytics = "G-888GND7PT1"
     url = "blog/"
     weight = 20
 
+  [[menu.main]]
+    name = "Contact"
+    url = "contact/"
+    weight = 20
+
+
+
